Bugs tests on ios

--- a/css/main.css
+++ b/css/main.css
@@ -243,7 +243,6 @@ main h3::after {
     background-color: rgba(255,255,255,0.1);
     border-top-left-radius: 60px;
     border-bottom-right-radius: 60px;
-    backdrop-filter: blur(3px);
 }
 
 .testimonials_img {
@@ -273,6 +272,8 @@ main h3::after {
     border-bottom: var(--border-24);
     border-right: var(--border-24);
     border-bottom-right-radius: 60px;
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
 }
 
 
